--- a/styles/styles.css
+++ b/styles/styles.css
@@ -436,6 +436,10 @@ body {
   align-items: center;
 }
 
+.social-item-vk{
+  background-image: ;
+}
+
 .social-list {
   list-style: none;
   width: 142px;
