--- a/styles/styles.css
+++ b/styles/styles.css
@@ -236,15 +236,36 @@ body {
   color: #000000;
 }
 
+.advantages-list h3::after{
+  content:"";
+  width: 60px;
+  height: 2px;
+  display: block;
+  background-color: rgba(0, 0, 0, 0.3);
+  margin:30px  auto;
+}
+
 .advantages-list p {
   font-weight: 400;
   font-size: 18px;
   line-height: 21px;
   text-align: center;
+  margin: 0;
 }
 
 .advantages-item-wide h3 {
   color: #ffffff;
+  margin: 0;
+}
+
+
+.advantages-item-wide h3::after{
+  content:"";
+  width: 60px;
+  height: 2px;
+  display: block;
+  background-color: rgba(255, 255, 255, 0.3);
+  margin:30px  auto;
 }
 
 .advantages-item:nth-child(even) {
