--- a/styles/styles.css
+++ b/styles/styles.css
@@ -452,7 +452,7 @@ input::placeholder {
   line-height: 24px;
   text-align: left;
   padding-left: 20px;
- outline: none;
+  outline: none;
   margin: 0;
 }
 
@@ -616,6 +616,15 @@ input::placeholder {
   align-items: center;
 }
 
+.select-control {
+  font-family: PT Sans;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 21px;
+  text-align: left;
+  border: 2px solid rgba(229, 229, 229, 1);
+}
+
 .page-search {
   margin-right: 200px;
   width: 338px;
@@ -661,6 +670,18 @@ input::placeholder {
   min-height: 48px;
   display: flex;
   flex-wrap: wrap;
+  gap: 8px;
+}
+
+.button-filter {
+  width: 48px;
+  height: 48px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid rgba(229, 229, 229, 1);
+  border-radius: 4px;
+  box-sizing: border-box;
 }
 
 .product-list {
