--- a/styles/styles.css
+++ b/styles/styles.css
@@ -76,6 +76,21 @@ body {
   gap: 32px;
 }
 
+.site-navigation-item{
+  width: auto;
+  min-height: 64px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-sizing: content-box;
+  padding: 0;
+}
+
+.site-navigation-item:hover{
+  border-bottom: 2px solid rgba(117, 98, 87, 1);
+
+}
+
 .menu {
   list-style: none;
   margin: 0;
