--- a/styles/styles.css
+++ b/styles/styles.css
@@ -78,7 +78,7 @@ body {
 
 .site-navigation-item{
   width: auto;
-  min-height: 64px;
+  height: 64px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -88,7 +88,7 @@ body {
 
 .site-navigation-item:hover{
   border-bottom: 2px solid rgba(117, 98, 87, 1);
-
+  box-sizing:border-box;
 }
 
 .menu {
