--- a/styles/styles.css
+++ b/styles/styles.css
@@ -78,17 +78,17 @@ body {
 
 .site-navigation-item{
   width: auto;
-  height: 64px;
+  min-height: 64px;
   display: flex;
   align-items: center;
-  justify-content: center;
   box-sizing: content-box;
   padding: 0;
 }
 
-.site-navigation-item:hover{
+.site-navigation .active{
   border-bottom: 2px solid rgba(117, 98, 87, 1);
   box-sizing:border-box;
+
 }
 
 .menu {
