--- a/styles/styles.css
+++ b/styles/styles.css
@@ -631,19 +631,28 @@ input::placeholder {
   gap: 16px;
 }
 
-.button-catalog-filter{
-width: 191px;
-height: 36px;
-border-radius: 4px;
-padding: 0;
-border: none;
-font-family: PT Sans;
-font-size: 16px;
-font-weight: 700;
-line-height: 20px;
-text-align: center;
+.button-catalog-filter {
+  width: 191px;
+  height: 36px;
+  border-radius: 4px;
+  padding: 0;
+  border: none;
+  font-family: PT Sans;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 20px;
+  text-align: center;
+  text-transform: uppercase;
+}
 
+.button-submit {
+  color: #ffffff;
+  background-color: #82b3d3;
+}
 
+.button-reset {
+  color: #ffffff;
+  background-color: rgba(130, 179, 211, 0);
 }
 
 .catalog-filter-group {
