--- a/styles/styles.css
+++ b/styles/styles.css
@@ -730,6 +730,10 @@ input::placeholder {
   box-sizing: border-box;
 }
 
+.button-filter-active{
+  border: 2px solid rgba(0, 0, 0, 1);
+}
+
 .product-list {
   list-style: none;
   width: 1060px;
