--- a/styles/styles.css
+++ b/styles/styles.css
@@ -456,9 +456,10 @@ body {
 .field {
   width: 452px;
   height: 52px;
-  border-radius: 4px;
   box-sizing: border-box;
   border: none;
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
 }
 
 input::placeholder {
@@ -470,13 +471,14 @@ input::placeholder {
   padding-left: 20px;
   outline: none;
   margin: 0;
-}
+  }
 
 
 .button-subscription-button {
   width: 232px;
   height: 52px;
-  border-radius: 4px;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
   font-family: PT Sans;
   font-size: 20px;
   font-weight: 700;
