--- a/styles/styles.css
+++ b/styles/styles.css
@@ -938,3 +938,21 @@ input::placeholder {
   margin: 0 auto;
   margin-bottom: 54px;
 }
+
+.button-state:active {
+  color: rgba(255, 255, 255, 0.3);
+}
+
+/* lightness  есть ли такое свойство? */
+.button-state {
+  filter: brightness(100%);
+}
+
+.button-state:disabled {
+  opacity: 10%;
+
+}
+
+.button-state:hover {
+  filter: brightness(80%);
+}
