--- a/styles/styles.css
+++ b/styles/styles.css
@@ -86,6 +86,19 @@ body {
   position: relative;
 }
 
+.navigation-link:focus {
+  color: #756157;
+}
+
+.navigation-link:hover {
+  color: #756157;
+}
+
+.navigation-link:active {
+  color: rgba(117, 97, 87, 0.3);
+}
+
+
 .active-link::before {
   content: "";
   height: 2px;
@@ -113,7 +126,19 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  color: #000000;
+}
 
+.menu-link:focus {
+  color: #756157;
+}
+
+.menu-link:hover {
+  color: #756157;
+}
+
+.menu-link:active {
+  color: rgba(117, 97, 87, 0.3);
 }
 
 .logo {
@@ -917,7 +942,19 @@ input::placeholder {
   grid-template-columns: repeat(3, 340px);
   gap: 20px;
   margin: 0;
-  margin-bottom: 40px;
+  margin-bottom: 80px;
+  position: relative;
+}
+
+.product-list::after {
+  content: "";
+  height: 1px;
+  width: 1060px;
+  background-color: #e6e6e6;
+  position: absolute;
+  bottom: -40px;
+  right: 70px;
+
 }
 
 .product-card-title {
@@ -1132,7 +1169,6 @@ input::placeholder {
 .pagination-link:active {
   color: rgba(255, 255, 255, 0.3);
 }
-
 
 .pagination-item .pagination-active {
   background: #f2f2f2;
