--- a/styles/styles.css
+++ b/styles/styles.css
@@ -222,6 +222,7 @@ body {
   background-size: 100% auto;
   text-align: center;
   min-height: 485px;
+  background-color: #1fa392;
 }
 
 .hero h1 {
@@ -506,6 +507,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: #1fa392;
 }
 
 .subscription h2 {
@@ -685,6 +687,7 @@ input::placeholder {
   background-size: 100% 100%;
   color: #ffffff;
   min-height: 412px;
+  background-color: #1fa392;
 }
 
 .filter-background-container {
