--- a/8/styles/styles.css
+++ b/8/styles/styles.css
@@ -76,19 +76,37 @@ body {
   gap: 32px;
 }
 
-.site-navigation-item {
+.navigation-link {
   width: auto;
   min-height: 64px;
   display: flex;
   align-items: center;
   box-sizing: content-box;
   padding: 0;
+  position: relative;
 }
 
-.site-navigation .active {
-  border-bottom: 2px solid rgba(117, 98, 87, 1);
-  box-sizing: border-box;
+.navigation-link:focus {
+  color: #756157;
+}
 
+.navigation-link:hover {
+  color: #756157;
+}
+
+.navigation-link:active {
+  color: rgba(117, 97, 87, 0.3);
+}
+
+
+.active-link::before {
+  content: "";
+  height: 2px;
+  background-color: #756257;
+  margin: 20px auto;
+  width: 100%;
+  position: absolute;
+  bottom: -20px;
 }
 
 .menu {
@@ -108,7 +126,19 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  color: #000000;
+}
 
+.menu-link:focus {
+  color: #756157;
+}
+
+.menu-link:hover {
+  color: #756157;
+}
+
+.menu-link:active {
+  color: rgba(117, 97, 87, 0.3);
 }
 
 .logo {
@@ -148,6 +178,19 @@ body {
   margin-left: 14px;
 }
 
+.menu-button:focus {
+  background: #615048;
+}
+
+.menu-button:hover {
+  background: #615048;
+}
+
+.menu-button:active {
+  color: rgba(255, 255, 255, 0.3);
+}
+
+
 .notification-badge {
   background-color: #7db54f;
   border-radius: 10px;
@@ -179,6 +222,7 @@ body {
   background-size: 100% auto;
   text-align: center;
   min-height: 485px;
+  background-color: #1fa392;
 }
 
 .hero h1 {
@@ -253,6 +297,7 @@ body {
   color: #000000;
   padding-right: 27.5px;
   padding-left: 27.5px;
+  word-break: break-word;
 }
 
 .advantages-list h3::after {
@@ -345,6 +390,7 @@ body {
   width: 230px;
   min-height: 160px;
   padding: 81px 85px;
+  padding-top: 144px;
 }
 
 .services-item h3 {
@@ -356,6 +402,25 @@ body {
   color: #000000;
   margin: 0;
   margin-bottom: 30px;
+}
+
+/* стоят не правильно,не пойму как правильно */
+.services-item-house {
+  background-image: url("../images/house.svg");
+  background-repeat: no-repeat;
+  background-position: center 34px;
+}
+
+.services-item-food {
+  background-image: url("../images/icon-food.svg");
+  background-repeat: no-repeat;
+  background-position: center 34px;
+}
+
+.services-item-souvenirs {
+  background-image: url("../images/present.svg");
+  background-repeat: no-repeat;
+  background-position: center 30px;
 }
 
 .services-item-svg {
@@ -418,6 +483,18 @@ body {
   border-radius: 4px;
 }
 
+.search-hotel-button:focus {
+  background: #615048;
+}
+
+.search-hotel-button:hover {
+  background: #615048;
+}
+
+.search-hotel-button:active {
+  color: rgba(255, 255, 255, 0.3);
+}
+
 .subscription {
   background-image: url("../images/subscribe-1.jpg");
   background-repeat: no-repeat;
@@ -430,6 +507,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: #1fa392;
 }
 
 .subscription h2 {
@@ -471,7 +549,6 @@ input::placeholder {
   line-height: 24px;
   text-align: left;
   padding-left: 20px;
-  outline: none;
   margin: 0;
 }
 
@@ -488,6 +565,18 @@ input::placeholder {
   color: #ffffff;
   background-color: #82b3d3;
   border: none;
+}
+
+.button-subscription-button:focus {
+  background: #68a2ca;
+}
+
+.button-subscription-button:hover {
+  background: #68a2ca;
+}
+
+.button-subscription-button:active {
+  color: rgba(255, 255, 255, 0.3);
 }
 
 .search-hotel {
@@ -510,38 +599,35 @@ input::placeholder {
   align-items: center;
 }
 
+
 .social-item a {
-  color: #000000;
   text-decoration: none;
+  width: 47px;
+  height: 40px;
   display: block;
-  width: 47px;
-  height: 40px;
 }
 
-.social-item {
-  width: 47px;
-  height: 40px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.social-item svg {
+  padding: 13px 12px;
 }
 
-.social-item-vk {
-  background-image: url("../images/vk.svg");
-  background-repeat: no-repeat;
-  background-position: center;
+.social-item svg {
+  color: #83b3d3;
 }
 
-.social-item-tg {
-  background-image: url("../images/telegram.svg");
-  background-repeat: no-repeat;
-  background-position: center;
+.social-item a :hover {
+  color: #68a2ca;
 }
 
-.social-item-yt {
-  background-image: url("../images/youtube.svg");
-  background-repeat: no-repeat;
-  background-position: center;
+/* не работает focus */
+
+.social-item a :focus {
+  outline: #6c9e42;
+  color: #7db54f;
+}
+
+.social-item a :active {
+  color: rgba(104, 162, 202, 0.3);
 }
 
 .social-list {
@@ -563,12 +649,45 @@ input::placeholder {
   width: 331px;
 }
 
+.contacts-phone:hover {
+  color: #756157;
+}
+
+.contacts-phone:focus {
+  color: #756157;
+}
+
+.contacts-phone:active {
+  color: rgba(117, 97, 87, 0.3);
+}
+
+.logo-academy:hover {
+  color: #756157;
+}
+
+.logo-academy:focus {
+  color: #756157;
+}
+
+.logo-academy:active {
+  color: rgba(117, 97, 87, 0.3);
+}
+
+.logo-academy:visited {
+  color: 000000;
+}
+
+.logo-academy {
+  color: #000000;
+}
+
 .filter-background {
   background-image: url("../images/subscribe-2.jpg");
   background-repeat: no-repeat;
   background-size: 100% 100%;
   color: #ffffff;
   min-height: 412px;
+  background-color: #1fa392;
 }
 
 .filter-background-container {
@@ -625,6 +744,18 @@ input::placeholder {
   text-decoration: none;
 }
 
+.breadcrumbs-link:hover {
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.breadcrumbs-link:focus {
+  color: #ffffff;
+}
+
+.breadcrumbs-link:active {
+  color: rgba(255, 255, 255, 0.3);
+}
+
 .catalog-filter-list {
   list-style: none;
   padding: 0;
@@ -652,9 +783,43 @@ input::placeholder {
   background-color: #82b3d3;
 }
 
+.button-submit:focus {
+  background: #68a2ca;
+}
+
+.button-submit:hover {
+  background: #68a2ca;
+
+}
+
+.button-submit:active {
+  color: rgba(255, 255, 255, 0.3);
+}
+
+.button-submit:disabled {
+  opacity: 10%;
+  background-color: rgba(255, 255, 255, 0);
+}
+
 .button-reset {
   color: #ffffff;
   background-color: rgba(130, 179, 211, 0);
+}
+
+.button-reset:hover {
+  opacity: 60%;
+}
+
+.button-reset:focus {
+  border: 3px solid #83b3d3;
+}
+
+.button-reset:active {
+  color: rgba(255, 255, 255, 0.3);
+}
+
+.button-reset:disabled {
+  opacity: 10%;
 }
 
 .catalog-filter-group {
@@ -690,20 +855,19 @@ input::placeholder {
   background-position: right 20px center;
 }
 
-.border-state {
+.select-control {
   border: 2px solid rgba(229, 229, 229, 1);
 }
 
-.border-state:hover {
-  border-color: rgba(104, 162, 202, 1);
+.select-control:hover {
+  border-color: #68a2Ca;
 }
 
-.border-state:focus {
-  outline: none;
-  border-color: rgba(63, 94, 114, 1);
+.select-control:focus {
+  border-color: #3f5e72;
 }
 
-.border-state:disabled {
+.select-control:disabled {
   opacity: 30%;
 }
 
@@ -755,16 +919,15 @@ input::placeholder {
   box-sizing: border-box;
 }
 
-.button-filter-state:hover {
+.button-filter:hover {
   border: 2px solid hsla(0, 0%, 0%, 1);
 }
 
-.button-filter-state:focus {
-  outline: none;
+.button-filter:focus {
   border: 2px solid hsla(204, 48%, 60%, 1);
 }
 
-.button-filter-state:active {
+.button-filter:active {
   border: 2px solid hsla(0, 0%, 0%, 1)
 }
 
@@ -782,7 +945,19 @@ input::placeholder {
   grid-template-columns: repeat(3, 340px);
   gap: 20px;
   margin: 0;
-  margin-bottom: 40px;
+  margin-bottom: 80px;
+  position: relative;
+}
+
+.product-list::after {
+  content: "";
+  height: 1px;
+  width: 1060px;
+  background-color: #e6e6e6;
+  position: absolute;
+  bottom: -40px;
+  right: 70px;
+
 }
 
 .product-card-title {
@@ -822,7 +997,7 @@ input::placeholder {
 
 .product-card h3 {
   font-weight: 700;
-  font-size: 28px;
+  font-size: 24px;
   line-height: 28px;
   color: #000000;
 }
@@ -863,6 +1038,18 @@ input::placeholder {
   align-items: center;
 }
 
+.product-card .product-card-button:focus {
+  background: #615048;
+}
+
+.product-card .product-card-button:hover {
+  background: #615048;
+}
+
+.product-card .product-card-button:active {
+  color: rgba(255, 255, 255, 0.3);
+}
+
 .product-card .product-card-button-favorites {
   color: #ffffff;
   background-color: #82b3d3;
@@ -877,6 +1064,35 @@ input::placeholder {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+
+.product-card .product-card-button-favorites:focus {
+  background: #68a2ca;
+}
+
+.product-card .product-card-button-favorites:hover {
+  background: #68a2ca;
+}
+
+.product-card .product-card-button-favorites:active {
+  color: rgba(255, 255, 255, 0.3);
+}
+
+.product-card .button-active {
+  background-color: #7db54f;
+}
+
+.product-card .button-active:focus {
+  background-color: #6c9e42;
+}
+
+.product-card .button-active:hover {
+  background-color: #6c9e42;
+}
+
+.product-card .button-active:active {
+  color: rgba(255, 255, 255, 0.3);
 }
 
 .product-card .rating {
@@ -897,11 +1113,26 @@ input::placeholder {
 
 .product-card .stars {
   width: 140px;
-  min-height: 37px;
+  height: 37px;
   justify-content: start;
   border-radius: 4px;
   display: flex;
   align-items: center;
+  background-image: url("../images/star-catalog.svg");
+  background-repeat: space no-repeat;
+  background-position: 0;
+}
+
+.product-card .stars-four {
+  width: 80px;
+}
+
+.product-card .stars-three {
+  width: 60px;
+}
+
+.product-card .stars-two {
+  width: 40px;
 }
 
 .pagination {
@@ -930,8 +1161,26 @@ input::placeholder {
   box-sizing: border-box;
 }
 
+.pagination-link:focus {
+  background: #68a2ca;
+}
+
+.pagination-link:hover {
+  background: #68a2ca;
+}
+
 .pagination-link:active {
   color: rgba(255, 255, 255, 0.3);
+}
+
+.pagination-item .pagination-active {
+  background: #f2f2f2;
+  color: #000000;
+}
+
+.pagination-item .ellipses {
+  background-color: rgba(130, 179, 211, 0);
+  color: #000000;
 }
 
 .subscription-catalog-container {
@@ -967,29 +1216,6 @@ input::placeholder {
   margin-bottom: 54px;
 }
 
-.button-state:active {
-  color: rgba(255, 255, 255, 0.3);
-}
-
-/* lightness  есть ли такое свойство?  цвета те же самые в состояниях , но разные оттенки*/
-/* .button-state {
-  filter: brightness(100%);
-} */
-
-/* .button-state:disabled {
-  opacity: 10%;
-
-} */
-
-/* .button-state:hover {
-  filter: brightness(80%);
-} */
-
-.button-state:active {
-  background-color: #7db54f;
-  color:rgba(255, 255, 255, 1);
-  }
-
-  .button-state:focus{
-
+.subscription-catalog input {
+  background-color: #f2f2f2;
 }
