--- a/styles/styles.css
+++ b/styles/styles.css
@@ -207,6 +207,18 @@ body {
   line-height: 10px;
 }
 
+.notification-badge:hover {
+  background-color: #6c9e42;
+}
+
+.notification-badge:focus {
+  background-color: #6c9e42;
+}
+
+.notification-badge:active {
+  color: rgba(255, 255, 255, 0.3);
+}
+
 .menu-link {
   text-decoration: none;
 }
@@ -403,22 +415,23 @@ body {
   padding-top: 102px;
 }
 
-/* стоят не правильно,не пойму как правильно */
+/* вставил фоном, но добавил див. */
+
 .services-item-house {
   background-image: url("../images/house.svg");
   background-repeat: no-repeat;
-  background-position: top center;
+  background-position: 50% 2%;
   width: 230px;
-  min-height:223px;
+  min-height: 223px;
   margin: 85px 81px;
 }
 
 .services-item-food {
   background-image: url("../images/icon-food.svg");
   background-repeat: no-repeat;
-  background-position: top center;
+  background-position: 50% 2%;
   width: 230px;
-  min-height:223px;
+  min-height: 223px;
   margin: 85px 81px;
 }
 
@@ -427,13 +440,15 @@ body {
   background-repeat: no-repeat;
   background-position: top center;
   width: 230px;
-  min-height:223px;
+  min-height: 223px;
   margin: 85px 81px;
 }
 
 .services-item-svg {
   margin-bottom: 30px;
 }
+
+/* как правильнее выравнять текст внутри? сейчас не по макету */
 
 .services-item p {
   font-weight: 400;
@@ -442,6 +457,7 @@ body {
   text-align: center;
   color: #333333;
   margin: 0;
+  padding: 0 25px;
 }
 
 .services-item:nth-child(odd) {
