--- a/8/styles/styles.css
+++ b/8/styles/styles.css
@@ -207,6 +207,18 @@ body {
   line-height: 10px;
 }
 
+.notification-badge:hover {
+  background-color: #6c9e42;
+}
+
+.notification-badge:focus {
+  background-color: #6c9e42;
+}
+
+.notification-badge:active {
+  color: rgba(255, 255, 255, 0.3);
+}
+
 .menu-link {
   text-decoration: none;
 }
@@ -387,10 +399,8 @@ body {
 }
 
 .services-item {
-  width: 230px;
-  min-height: 160px;
-  padding: 81px 85px;
-  padding-top: 144px;
+  width: 400px;
+  min-height: 385px;
 }
 
 .services-item h3 {
@@ -402,30 +412,43 @@ body {
   color: #000000;
   margin: 0;
   margin-bottom: 30px;
+  padding-top: 102px;
 }
 
-/* стоят не правильно,не пойму как правильно */
+/* вставил фоном, но добавил див. */
+
 .services-item-house {
   background-image: url("../images/house.svg");
   background-repeat: no-repeat;
-  background-position: center 34px;
+  background-position: 50% 2%;
+  width: 230px;
+  min-height: 223px;
+  margin: 85px 81px;
 }
 
 .services-item-food {
   background-image: url("../images/icon-food.svg");
   background-repeat: no-repeat;
-  background-position: center 34px;
+  background-position: 50% 2%;
+  width: 230px;
+  min-height: 223px;
+  margin: 85px 81px;
 }
 
 .services-item-souvenirs {
   background-image: url("../images/present.svg");
   background-repeat: no-repeat;
-  background-position: center 30px;
+  background-position: top center;
+  width: 230px;
+  min-height: 223px;
+  margin: 85px 81px;
 }
 
 .services-item-svg {
   margin-bottom: 30px;
 }
+
+/* как правильнее выравнять текст внутри? сейчас не по макету */
 
 .services-item p {
   font-weight: 400;
@@ -434,6 +457,7 @@ body {
   text-align: center;
   color: #333333;
   margin: 0;
+  padding: 0 25px;
 }
 
 .services-item:nth-child(odd) {
