--- a/styles/styles.css
+++ b/styles/styles.css
@@ -631,18 +631,17 @@ body {
   color: #83b3d3;
 }
 
-.social-item a :hover {
+.social-item a:hover {
   color: #68a2ca;
 }
 
 /* не работает focus */
 
-.social-item a :focus {
-  outline: #6c9e42;
+.social-item a:focus {
   color: #7db54f;
 }
 
-.social-item a :active {
+.social-item a:active {
   color: rgba(104, 162, 202, 0.3);
 }
 
@@ -786,7 +785,7 @@ body {
   border-radius: 4px;
   padding: 0;
   border: none;
-  font-family: PT Sans;
+  font-family: "PT Sans", sans-serif;
   font-size: 16px;
   font-weight: 700;
   line-height: 20px;
@@ -852,7 +851,7 @@ body {
 }
 
 .select-control {
-  font-family: PT Sans;
+  font-family: "PT Sans", sans-serif;
   font-size: 18px;
   font-weight: 400;
   line-height: 21px;
