--- a/8/styles/styles.css
+++ b/8/styles/styles.css
@@ -77,7 +77,13 @@ body {
 }
 
 .navigation-link {
-  width: auto;
+  font-size: 20px;
+  line-height: 24px;
+  color: #000000;
+  text-decoration: none;
+  font-weight: 700;
+  text-align: center;
+  list-style-type: none;
   min-height: 64px;
   display: flex;
   align-items: center;
@@ -147,16 +153,6 @@ body {
   margin-right: 28px;
   display: flex;
   align-items: center;
-}
-
-.navigation-link {
-  font-size: 20px;
-  line-height: 24px;
-  color: #000000;
-  text-decoration: none;
-  font-weight: 700;
-  text-align: center;
-  list-style-type: none;
 }
 
 .menu-button {
@@ -420,7 +416,7 @@ body {
 .services-item-house {
   background-image: url("../images/house.svg");
   background-repeat: no-repeat;
-  background-position: 50% 3%;
+  background-position: 50% 3px;
   width: 230px;
   min-height: 223px;
   margin: 85px 81px;
@@ -429,7 +425,7 @@ body {
 .services-item-food {
   background-image: url("../images/icon-food.svg");
   background-repeat: no-repeat;
-  background-position: 50% 3.5%;
+  background-position: 50% 4px;
   width: 230px;
   min-height: 223px;
   margin: 85px 81px;
@@ -438,7 +434,7 @@ body {
 .services-item-souvenirs {
   background-image: url("../images/present.svg");
   background-repeat: no-repeat;
-  background-position: top center;
+  background-position: 50% 0;
   width: 230px;
   min-height: 223px;
   margin: 85px 81px;
@@ -457,7 +453,6 @@ body {
   text-align: center;
   color: #333333;
   margin: 0;
-  padding: 0 25px;
 }
 
 .services-item:nth-child(odd) {
@@ -564,10 +559,7 @@ body {
   border: none;
   border-top-left-radius: 4px;
   border-bottom-left-radius: 4px;
-}
-
-input::placeholder {
-  font-family: PT Sans;
+  font-family: "PT Sans", sans-serif;
   font-size: 18px;
   font-weight: 400;
   line-height: 24px;
@@ -639,18 +631,17 @@ input::placeholder {
   color: #83b3d3;
 }
 
-.social-item a :hover {
+.social-item a:hover {
   color: #68a2ca;
 }
 
 /* не работает focus */
 
-.social-item a :focus {
-  outline: #6c9e42;
+.social-item a:focus {
   color: #7db54f;
 }
 
-.social-item a :active {
+.social-item a:active {
   color: rgba(104, 162, 202, 0.3);
 }
 
@@ -794,7 +785,7 @@ input::placeholder {
   border-radius: 4px;
   padding: 0;
   border: none;
-  font-family: PT Sans;
+  font-family: "PT Sans", sans-serif;
   font-size: 16px;
   font-weight: 700;
   line-height: 20px;
@@ -860,7 +851,7 @@ input::placeholder {
 }
 
 .select-control {
-  font-family: PT Sans;
+  font-family: "PT Sans", sans-serif;
   font-size: 18px;
   font-weight: 400;
   line-height: 21px;
@@ -884,15 +875,16 @@ input::placeholder {
 }
 
 .select-control:hover {
-  border-color: #68a2Ca;
+  border-color: #68a2ca;
 }
 
 .select-control:focus {
+  outline: none;
   border-color: #3f5e72;
 }
 
 .select-control:disabled {
-  opacity: 30%;
+  opacity: 0.3;
 }
 
 .page-search {
@@ -944,15 +936,16 @@ input::placeholder {
 }
 
 .button-filter:hover {
-  border: 2px solid hsla(0, 0%, 0%, 1);
+  border: 2px solid #000000;
 }
 
 .button-filter:focus {
-  border: 2px solid hsla(204, 48%, 60%, 1);
+  outline: none;
+  border: 2px solid #68a2ca;
 }
 
 .button-filter:active {
-  border: 2px solid hsla(0, 0%, 0%, 1)
+  border: 2px solid #000000;
 }
 
 
@@ -1039,7 +1032,6 @@ input::placeholder {
   display: grid;
   grid-template-columns: 140px 140px;
   gap: 16px 20px;
-
 }
 
 .product-card-link {
@@ -1203,7 +1195,7 @@ input::placeholder {
 }
 
 .pagination-item .ellipses {
-  background-color: rgba(130, 179, 211, 0);
+  background-color: transparent;
   color: #000000;
 }
 
