--- a/8/styles/styles.css
+++ b/8/styles/styles.css
@@ -224,8 +224,8 @@ body {
 .hero {
   color: #000000;
   background:
-    url(../images/hero-border.svg) bottom,
-    url(../images/index-background.jpg);
+    url("../images/hero-border.svg") bottom,
+    url("../images/index-background.jpg");
   background-repeat: no-repeat;
   background-size: 100% auto;
   text-align: center;
@@ -565,6 +565,7 @@ body {
   line-height: 24px;
   text-align: left;
   padding-left: 20px;
+  padding-right: 20px;
   margin: 0;
 }
 
@@ -573,7 +574,7 @@ body {
   height: 52px;
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
-  font-family: PT Sans;
+  font-family: "PT Sans";
   font-size: 20px;
   font-weight: 700;
   line-height: 36px;
@@ -615,30 +616,24 @@ body {
   align-items: center;
 }
 
-
 .social-item a {
   text-decoration: none;
   width: 47px;
   height: 40px;
   display: block;
+  color: #83b3d3;
 }
 
 .social-item svg {
   padding: 13px 12px;
 }
 
-.social-item svg {
-  color: #83b3d3;
-}
-
 .social-item a:hover {
   color: #68a2ca;
 }
 
-/* не работает focus */
-
 .social-item a:focus {
-  color: #7db54f;
+  color: #68a2ca;
 }
 
 .social-item a:active {
