--- a/styles/styles.css
+++ b/styles/styles.css
@@ -788,14 +788,9 @@ body {
   text-transform: uppercase;
 }
 
-.catalog-filter {
-  width: 228px;
-  height: 160px;
-}
-
 .range-wrapper-inputs {
   display: flex;
-  margin-top: 32px;
+  gap: 2px;
 }
 
 .range-scale {
@@ -818,6 +813,16 @@ body {
   outline: none;
   border-radius: 4px;
   border: none;
+}
+
+.range-min {
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+}
+
+.range-max {
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
 }
 
 .button-submit {
@@ -866,6 +871,8 @@ body {
 
 .catalog-filter-group {
   padding: 0;
+  outline: none;
+  border: 0;
 }
 
 .select-container {
@@ -923,10 +930,31 @@ body {
   align-items: center;
 }
 
-.filter-background .catalog-filter-title {
+.catalog-filter-title {
+  margin-bottom: 32px;
+}
+
+.filter-infrastructure {
+  margin-right: 70px;
+}
+
+.filter-type-house {
+  margin-right: 140px;
+}
+
+.catalog-filter-range {
+  padding: 0;
+  outline: none;
+  border: 0;
+  margin-right: 70px;
+}
+
+.filter-background {
   font-weight: 700;
   font-size: 20px;
   line-height: 24px;
+  font-family: "PT Sans";
+  text-align: left;
 }
 
 .filter-background .catalog-filter-item {
