--- a/styles/styles.css
+++ b/styles/styles.css
@@ -772,6 +772,20 @@ body {
   margin: 0;
   display: grid;
   gap: 16px;
+  width: 150px;
+}
+
+.catalog-filter-group {
+  width: 150px;
+  min-height: 157px;
+}
+
+.control-label{
+  font-family: "PT Sans";
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 23px;
+  text-align: left;
 }
 
 .button-catalog-filter {
@@ -796,7 +810,7 @@ body {
 .range-scale {
   position: relative;
   height: 4px;
-  background-color: #242424;
+  background-color: gray;
   border-radius: 2px;
 }
 
@@ -817,6 +831,7 @@ body {
   outline: none;
   border-radius: 4px;
   border: none;
+  padding-left: 20px;
 }
 
 .range-min {
@@ -842,10 +857,8 @@ body {
 
 .toggle-max {
   top: -8px;
-  right: 0px;
+  right: 0;
 }
-
-
 
 .button-submit {
   color: #ffffff;
@@ -973,6 +986,8 @@ body {
   outline: none;
   border: 0;
   margin-right: 70px;
+  width: 288px;
+  min-height: 160px;
 }
 
 .filter-background {
